<resources>
    <string name="app_name">Cinema</string>
    <string name="films">Films</string>
    <string name="actors">Actors</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="purchases">Purchases</string>
    <string name="subscription">Subscription</string>
    <string name="users">Users</string>
    <string name="user">User</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="changeaccount">Change account</string>
    <string name="exit">Exit</string>
    <string name="other">Other</string>
    <string name="management">Management</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reqister">Registration</string>
    <string name="log_in">Log in</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="filterfilms">Filter films</string>
    <string name="orderby">Order by</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="all">all</string>
    <string name="defaultorderby">default</string>
    <string name="orderdateadded">date added</string>
    <string name="orderyear">year</string>
    <string name="ordergenre">genre</string>
    <string name="orderrating">rating</string>
    <string name="orderprice">price</string>
    <string name="wrongcredentials">Login or password contains wrong characters</string>
    <string name="networkerror">There is no internet connection. Please check your internet connection and try again</string>
    <string name="badcredentialserror">Login or password incorrect</string>
    <string name="userblocked">User account blocked. Please contact support</string>
    <string name="internalservererror">There was an error on the server. Please try again later</string>
    <string name="unknownerror">Unknown error while processing the request. Please try again later</string>
    <string name="filmsnotfound">Films not found</string>
    <string name="film">Film</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="share">Share</string>
    <string name="addtofavorites">Add to favorites</string>
    <string name="removefromfavorites">Remove from favorites</string>
    <string name="rating">Rating:</string>
    <string name="director">Director:</string>
    <string name="sharefirst">I want to share a movie</string>
    <string name="sharesecond">with you! You can watch it in applicatin "Cinema Online".</string>
    <string name="sharetitle">Share this movie!</string>
    <string name="delete">Delete</string>
    <string name="noactors">No actors found. Please check this page later</string>
    <string name="noreviews">No reviews found</string>
    <string name="search">Search</string>
    <string name="rate">Rate</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="passerror">Password incorrect</string>
    <string name="emailerror">Email incorrect</string>
    <string name="loginerror">Login incorrect</string>
    <string name="fioerror">FIO incorrect</string>
    <string name="emailexistst">User with this e-mail already registered</string>
    <string name="loginexistst">User with this login already registered</string>
    <string name="comment">Comment</string>
    <string name="commentrestriction">Minimum length of comment is 20 symbols</string>
    <string name="dateincorrect">Can not set a birthday in the future</string>
    <string name="submit">Submit</string>
    <string name="mark">Mark</string>
    <string name="markadded">Mark added!</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="reload">Reload page</string>
    <string name="save">Save</string>
    <string name="fio">FIO</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="notset">Not set</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="moderator">Moderator</string>
    <string name="admin">Administrator</string>
    <string name="setdate">Set date</string>
    <string name="newpassword">Set new password</string>
    <string name="successupdate">Data was successfully updated</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_auth">Authorization</string>
    <string name="title_activity_film">Film</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_profile">My profile</string>
    <string name="title_activity_mark">Rate the movie</string>
</resources>
