<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/films" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/statistics"
            android:visible="false"/>

    </group>


    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_changeaccount"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="@string/changeaccount" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
