<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.visapps.cinemaonline.fragments.FilmFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/FilmContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/FilmName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Джон уик"
                    android:textSize="20dp"
                    android:gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/Poster"
                        android:layout_width="200dp"
                        android:layout_height="300dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/Genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Боевик"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/FilmCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Великобритания"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/FilmYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2017"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/AgeLimit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="16+"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/Cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="299₽"
                            android:layout_marginBottom="5dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating" />

                            <TextView
                                android:id="@+id/Rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 4.9" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/sharebutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:text="@string/share" />

                        <Button
                            android:id="@+id/favbutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:text="@string/addtofavorites"
                            android:enabled="false"/>

                        <Button
                            android:id="@+id/markbutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:text="@string/rate"
                            android:enabled="false"/>


                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director" />

                    <TextView
                        android:id="@+id/Director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Гор вербински" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/FDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:text="Когда бывший коллега Джона решает взять под свой контроль таинственную гильдию убийц, Уик вынужден выйти из отставки. Ведомый кровавой клятвой Джон отправляется в Рим, где ему придется сразиться с одними из самых опасных киллеров в мире." />


            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
        android:visibility="gone"/>

</FrameLayout>
